fix: divider on dark mode

--- a/src/assets/themes/scss/themes/azion-dark/extended-components/_divider.scss
+++ b/src/assets/themes/scss/themes/azion-dark/extended-components/_divider.scss
@@ -8,7 +8,7 @@
       padding: $dividerHorizontalPadding;
 
       &:before {
-          border-top: $dividerSize $dividerColor;
+          border-top: 1px solid var(--surface-border);
       }
 
       .p-divider-content {
@@ -21,7 +21,7 @@
       padding: $dividerVerticalPadding;
 
       &:before {
-          border-left: $dividerSize $dividerColor;
+          border-left: 1px solid var(--surface-border);
       }
 
       .p-divider-content {
