--- a/src/assets/themes/scss/themes/azion-light/extended-components/_divider.scss
+++ b/src/assets/themes/scss/themes/azion-light/extended-components/_divider.scss
@@ -22,7 +22,7 @@
       padding: $dividerVerticalPadding;
 
       &:before {
-          border-left: $dividerSize $dividerColor;
+          border-left: 1px solid var(--surface-border);
       }
 
       .p-divider-content {
